--- a/package.json
+++ b/package.json
@@ -12,9 +12,13 @@
     "@tailwindcss/vite": "^4.0.17",
     "@tanstack/react-query": "^5.69.3",
     "@types/mermaid": "^9.1.0",
+    "@uiw/react-markdown-preview": "^5.1.3",
+    "@uiw/react-md-editor": "^4.0.5",
+    "js-tiktoken": "^1.0.19",
     "mermaid": "^11.4.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-icons": "^5.5.0",
     "react-router-dom": "^7.4.0"
   },
   "devDependencies": {
