--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
     "@types/mermaid": "^9.1.0",
     "@uiw/react-markdown-preview": "^5.1.3",
     "@uiw/react-md-editor": "^4.0.5",
+    "github-markdown-css": "^5.8.1",
     "js-tiktoken": "^1.0.19",
     "mermaid": "^11.4.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
+    "react-markdown": "^10.1.0",
     "react-router-dom": "^7.4.0"
   },
   "devDependencies": {
