--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/mermaid": "^9.1.0",
     "@uiw/react-markdown-preview": "^5.1.3",
     "@uiw/react-md-editor": "^4.0.5",
+    "@use-gesture/react": "^10.3.1",
     "axios": "^1.8.4",
     "github-markdown-css": "^5.8.1",
     "js-tiktoken": "^1.0.19",
@@ -23,7 +24,8 @@
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
     "react-markdown": "^10.1.0",
-    "react-router-dom": "^7.4.0"
+    "react-router-dom": "^7.4.0",
+    "use-long-press": "^3.3.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
