--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,7 +1,7 @@
 {
-  "name": "DEX Frontend",
-  "short_name": "DEX",
-  "description": "DEX Frontend Application",
+  "name": "Dex",
+  "short_name": "Dex",
+  "description": "Dex",
   "theme_color": "#ffffff",
   "background_color": "#ffffff",
   "display": "standalone",
